Fix UI bug
the data table was not stretching or overflowing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -221,7 +221,7 @@ button.nav-btn {
     }
 
     .collapse.open {
-        max-height: 400px;
+        max-height: 650px;
     }
 
     .nav-form-group {
@@ -1051,12 +1051,21 @@ manager-items-option{
 
 /* End Header */
 
+/* Start Main Wrapper */
+
+.wrapper {
+
+}
+
+/* End Main Wrapper */
+
 /* Start Botton Footer */
 
 .footer-nav {
     padding: 2em 0;
     text-align: center;
     width: 100%;
+    margin: auto 0
 }
 
 /* Start Botton Footer */
@@ -1116,11 +1125,16 @@ body {
     color: white;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 .app {
     display: grid;
     grid-template-rows: auto 1fr auto;
-    /* grid-template-columns: 100%; */
-    min-height:100vh;
+    grid-template-columns: 100%;
+    min-height: 100%;
 }
 
 button {
@@ -1316,8 +1330,8 @@ a {
 
 .form-search {
     display: flex;
-    width: 400px;
-    max-width: 100%;
+    width: 100%;
+    max-width: 400px;
 }
 
 .form-search .form-search-text {
@@ -1670,12 +1684,15 @@ input:checked + .slider:before, input:checked+.slider-sm:before {
     float: right;
 }
 
+.table-wrapper {
+    border-radius: 8px;
+    overflow-x: auto;
+}
+
 .table {
     width: 100%;
-    max-width: 100%;
     background-color: rgb(20, 41, 62);
-    border-radius: 8px;
-    overflow: auto;
+    min-width: max-content;
 }
 
 .table td, .table th {
@@ -1684,6 +1701,8 @@ input:checked + .slider:before, input:checked+.slider-sm:before {
 
 .table th {
     text-align: left;
+    background-color: rgb(20, 41, 62);
+    z-index: 1;
 }
 
 .table td {
@@ -1696,14 +1715,27 @@ input:checked + .slider:before, input:checked+.slider-sm:before {
     border-collapse: collapse;
 }
 
-.scroll {
-    overflow: auto;
+.table-wrapper.scroll {
+    overflow-x: auto;
 }
 
-.hidden {
-    display: none;
+.table-wrapper.scroll::-webkit-scrollbar {
+    height: 15px;
 }
 
+.table-wrapper.scroll::-webkit-scrollbar-track {
+    background-color: rgba(81, 79, 92, 0.842)
+}
+
+.table-wrapper.scroll::-webkit-scrollbar-thumb {
+    background-color: rgb(39, 32, 49);
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.table-wrapper.scroll::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(39, 32, 49, 0.842)
+}
 /* Start Custom Checkbox  */
 
 .checkbox {
